Управление камерой мышкой, тестовый вариант