@@ -6,12 +6,12 @@ import com.cgvsu.model.Model;
 import com.cgvsu.model.Polygon;
 import com.cgvsu.objreader.ObjReader;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class TestMain {
     public static void main(String[] args) throws IOException {
@@ -31,7 +31,7 @@ public class TestMain {
                 new Vector3C(-4.0f, -5.0f, -6.0f),
                 new Vector3C(-7.0f, -8.0f, -6.0f)
         ));
-        model1.polygons = new ArrayList<>(Arrays.asList(
+        model1.polygons = new ArrayList<>(List.of(
                 new Polygon() {{
                     setVertexIndices(new ArrayList<>(Arrays.asList(0, 1, 2)));
                     setTextureVertexIndices(new ArrayList<>(Arrays.asList(0, 1, 2)));
@@ -43,7 +43,6 @@ public class TestMain {
 
         ObjWriterClass objWriter = new ObjWriterClass();
         objWriter.write(model1, filename);
-        File file = new File(filename);
 
         Path fileName = Path.of("ObjWriterTest1.obj");
         String fileContent = Files.readString(fileName);
